<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeText"
            style="@style/TextViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome_text"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/welcomeTextDesc"
            style="@style/TextViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_desc"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/nextButton"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</layout>