<?xml version="1.0" encoding="utf-8"?>
<layout>
    <!-- LinearLayout as the views are all oriented vertically above each other -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructionsText"
            style="@style/TextViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/instructions_how_to_use_text"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/instructionsTextDesc"
            style="@style/TextViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_how_to_use_text_desc"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/nextButton"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</layout>